src/test/resources/com/github/stefanbirkner/chelidonium/errors/singleError.snippet


<form id="model" action="/test/errors/singleError.html" method="post">
	<div class="alert alert-error">Test A</div>
</form>